style.css
@media only screen and (max-device-width: 736px) {
    body {
        padding: 0rem;
    }
}

/*
 * Colors
 */

:root {
    --bg: #282828;
    --fg: #ebdbb2;
    --green: #98971a;
    --purple: #b16286;
    --blue: #458588;
    --highlight: #3c3836;
}

@media (prefers-color-scheme: dark) {
    :root {
        --bg: #fbf1c7;
        --fg: #3c3836;
        --green: #79740e;
        --purple: #b16286;
        --blue: #458588;
        --highlight: #ebdbb2;
    }
}

::selection {
    background: var(--highlight);
}

body {
    font-family: monospace, monospace;
    background-color: var(--bg);
    color: var(--fg);
    max-width: 38rem;
    padding: 2rem;
    margin: auto;
    text-align: justify;
}

pre {
    background-color: var(--highlight);
    padding: 1em;
    border: 0px;
    border-radius: 2px;
}

code {
    background-color: var(--highlight);
    padding: 0.1em;
    border: 0px solid;
    border-radius: 2px;
}

a, a:active, a:visited {
    color: var(--purple);
    text-decoration: none;
}

h1, h2, h3, h4, h5 {
    /* margin-bottom: .1rem; */
    color: var(--green);
}

blockquote {
    color: #a89984;
    /* border-left: 1px solid #bdae93; */
    /* margin: 0.5em 10px; */
    /* padding: 0.5em 10px; */
}

img {
	border: 0px;
	border-radius: 5px;
}

header, footer {
    text-align: center;
    align: center;
}

/*
 * ReMarkdown 3.1.0 (MIT) https://fvsch.github.io/remarkdown/
 */

.remarkdown {
  line-height: 1.5;
  font-family: monospace, monospace;
}
.remarkdown pre,
.remarkdown code,
.remarkdown kbd,
.remarkdown samp {
  font-family: inherit;
}

.remarkdown h1 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 2.25em;
  margin-bottom: 1.5em;
}
.remarkdown h2 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 2.25em;
  margin-bottom: 1.5em;
}
.remarkdown h3,
.remarkdown h4,
.remarkdown h5,
.remarkdown h6 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.remarkdown h1::before {
  content: "# ";
}
.remarkdown h2::before {
  content: "## ";
}
.remarkdown h3::before {
  content: "### ";
}
.remarkdown h4::before {
  content: "#### ";
}
.remarkdown h5::before {
  content: "##### ";
}
.remarkdown h6::before {
  content: "###### ";
}

.remarkdown.h2-underline h2,
.remarkdown.h1-underline h1 {
  display: table;
  overflow: hidden;
  position: relative;
  padding-bottom: 1.5em;
}
.remarkdown.h2-underline h2::before,
.remarkdown.h1-underline h1::before {
  content: none;
}
.remarkdown.h2-underline h2::after,
.remarkdown.h1-underline h1::after {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 1.5em;
  width: 100%;
  overflow: hidden;
  word-break: break-all;
  cursor: default;
}

.remarkdown.h1-underline h1::after {
  content: "========================================================================================================================";
}

.remarkdown.h2-underline h2::after {
  content: "------------------------------------------------------------------------------------------------------------------------";
}

.remarkdown p {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}
.remarkdown figure {
  margin: 1.5em 0 1.5em;
}

.remarkdown hr {
  height: 1.5em;
  line-height: 1.5em;
  margin: 1.5em 0 1.5em;
  border: none;
  color: inherit;
  text-align: center;
}

.remarkdown.hr-center hr {
}

.remarkdown hr::before {
  content: "* * * *";
}

.remarkdown.hr-hyphen hr::before {
  content: "-------";
}

.remarkdown ul {
  margin: 1.5em 0ch 1.5em 4ch;
  padding: 0;
}
.remarkdown li ul {
  margin-top: 0;
  margin-bottom: 0;
}

.remarkdown.ul-plus ul {
  list-style: none;
}
.remarkdown.ul-plus ul > li::before {
  float: left;
  width: 1ch;
  margin-left: -4ch;
  margin-right: 1ch;
  content: "+";
}

.remarkdown.ul-star ul {
  list-style: none;
}
.remarkdown.ul-star ul > li::before {
  float: left;
  width: 1ch;
  margin-left: -4ch;
  margin-right: 1ch;
  content: "*";
}

.remarkdown ul {
  list-style: none;
}
.remarkdown ul > li::before {
  float: left;
  width: 1ch;
  color: var(--blue);
  margin-left: -4ch;
  margin-right: 1ch;
  content: "-";
}

.remarkdown ol {
  margin: 1.5em 0ch 1.5em 4ch;
  padding: 0;
}
.remarkdown li ol {
  margin-top: 0;
  margin-bottom: 0;
}

.remarkdown ol {
  list-style: none;
  counter-reset: rmd-ol;
}
.remarkdown ol > li {
  counter-increment: rmd-ol;
}
.remarkdown ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: counter(rmd-ol) ".";
}

.remarkdown.ol-zero ol {
  list-style: none;
}
.remarkdown.ol-zero ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: "0.";
}

.remarkdown.ol-alpha ol {
  list-style: none;
  counter-reset: rmd-ol;
}
.remarkdown.ol-alpha ol > li {
  counter-increment: rmd-ol;
}
.remarkdown.ol-alpha ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: counter(rmd-ol, lower-alpha) ".";
}

.remarkdown a::before :not(.sourceCode) {
  content: "[";
}
.remarkdown a::after :not(.sourceCode) {
  content: "]";
}

.remarkdown.a-showurl a[href]::before {
  content: "[";
}
.remarkdown.a-showurl a[href]::after {
  content: "](" attr(href) ")";
  word-break: break-all;
}

.remarkdown em,
.remarkdown strong {
  font-style: normal;
  font-weight: normal;
}

.remarkdown em::before,
.remarkdown em::after {
  content: "*";
}

.remarkdown.em-underscore em::before,
.remarkdown.em-underscore em::after {
  content: "_";
}

.remarkdown strong::before,
.remarkdown strong::after {
  content: "**";
}

.remarkdown.strong-underscore strong::before,
.remarkdown.strong-underscore strong::after {
  content: "__";
}

.remarkdown code::before,
.remarkdown code::after {
  content: "`";
}
.remarkdown pre code::before,
.remarkdown pre code::after {
  display: none;
}

.remarkdown pre {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  tab-size: 4;
}

.remarkdown pre {
  margin-left: 4ch;
  margin-right: 0ch;
}

.remarkdown.pre-tilde-full pre::before,
.remarkdown.pre-tilde-full pre::after,
.remarkdown.pre-tilde pre::before,
.remarkdown.pre-tilde pre::after,
.remarkdown.pre-tick pre::before,
.remarkdown.pre-tick pre::after {
  display: block;
  width: 100%;
  height: 1.5em;
  cursor: default;
}

.remarkdown.pre-tick pre::before,
.remarkdown.pre-tick pre::after {
  content: "```";
  position: relative;
  top: 0.25em;
}

.remarkdown.pre-tilde pre::before,
.remarkdown.pre-tilde pre::after {
  content: "~~~";
  overflow: hidden;
  word-break: break-all;
}

.remarkdown.pre-tilde-full pre::before,
.remarkdown.pre-tilde-full pre::after {
  content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
  overflow: hidden;
  word-break: break-all;
}

.remarkdown blockquote {
  margin: 1.5em 2ch 1.5em 2ch;
  padding: 0;
}

.remarkdown blockquote {
  position: relative;
}
.remarkdown blockquote::before {
  position: absolute;
  top: 0;
  left: -2ch;
  bottom: 0;
  width: 1ch;
  overflow: hidden;
  white-space: pre;
  content: ">\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a";
  cursor: default;
}

.remarkdown.del-gfm del {
  text-decoration: none;
}
.remarkdown.del-gfm del::before,
.remarkdown.del-gfm del::after {
  content: "~~";
}

.remarkdown.table-marker table {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border-collapse: collapse;
}
.remarkdown.table-marker tr > * {
  min-width: 3ch;
  position: relative;
  padding: 0;
  text-align: inherit;
  vertical-align: top;
  font-weight: normal;
  border: none;
}
.remarkdown.table-marker tr > * + * {
  padding-left: 3ch;
}
.remarkdown.table-marker tr:first-child > th:not([scope="row"]) {
  padding-bottom: 1.5em;
}
.remarkdown.table-marker tr:first-child > th:not([scope="row"])::after {
  content: "--------------------------------------------------------------------------------------------------------------";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  word-break: break-all;
  height: 1.5em;
}
.remarkdown.table-marker tr:first-child > * + th:not([scope="row"])::after {
  left: 3ch;
}
.remarkdown.table-marker tr > * + *::before {
  content: "|\a|\a|\a|\a|\a|\a|\a|\a|\a|\a";
  position: absolute;
  overflow: hidden;
  left: 1ch;
  top: 0;
  bottom: 0;
  white-space: pre;
}

